13371
```scala
case class A(s: String) {
}

object A {
    def apply(s: String) = new A(s)
}

class X {
    val a = A("xx")
}
```
```scala
hello.scala:1: error: method apply is defined twice
case class A(s: String) {
           ^
hello.scala:9: error: ambiguous reference to overloaded definition,
both method apply in object A of type (String)A
and  method apply in object A of type (String)A
match argument types (java.lang.String)
    val a = A("xx")
            ^
two errors found
```

2.7.1.RC2

I expect object apply method called.
